2003-11-12  Jon Schewe  <jpschewe@mtu.net>

	* Release version 2.0.  This is the version of the software I plan
	to use for this season.
	
2003-11-09  Jon Schewe  <jpschewe@mtu.net>

	* web/admin/verifyTournamentInitialization.jsp: Fix Oops when
	setting tournaments.

	* src/fll/xml/GenerateDB.java (generateDB): Handle long region names.

	* web/admin/teamColumnSelection.jsp: Added column sizes to column
	selection page.

	* src/fll/Queries.java (insertTournamentsForRegions): Make sure we
	don't try to create duplicate tournaments.

2003-11-08  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/scoreEntry/ScoreEntry.java
	(generateInitForScoreEdit): Include the tournament when looking
	for initial values for score edit (836264). 

	* web/scoreboard/title.jsp: Change scoreboard text to be white so
	that it's easier to read (836265).

	* web/report/teamPerformanceReport.jsp: Display no show for no show
	performance scores (836266).

	* web/report/performanceRunReport.jsp: Display no show for no show
	performance scores (836266).

	* build.xml: Changed slashes in subjective.bat to work with win9x
	as well as NT.

2003-10-27  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/Queries.java (updateScoreTotals): Handle rows with all
	NULLs for scores.  This is a bug that Chuck Davis found as well.

2003-10-25  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/Queries.java (updateScoreTotals): need different update
	to include Judge column (830276)

2003-10-24  Jon Schewe  <jpschewe@mtu.net>

	* web/admin/commitTeam.jsp: Report an error on attempting to enter
	a duplicate team number.

	* src/fll/Queries.java (updateScoreTotals): Only check for Bye
	column on performance scores (bug from Chuck, didn't make it to SF).
	(updateScoreTotals): Fixed another bug from Chuck where all
	subjective scores were 0.

2003-10-22  Jon Schewe  <jpschewe@mtu.net>
	
	* labeled fll_2003_test_20031022 for testing

	* web/scoreEntry/scoreEntry.jsp: Made background yellow instead of