@@ -12,7 +12,7 @@
       <li><a href='<c:url value="/scoreboard_800/main.jsp" />'>Primary Scoreboard
             (800x600)</a></li>
         
-      <li><a href='<c:url value="allteams.jsp"><c:param name="scroll" value="false"/></c:url>'>All Teams, All Runs (primarily for internal use)</a></li>
+      <li><a href='<c:url value="allteams.jsp"/>'>All Teams, All Runs (primarily for internal use)</a></li>
         
     </ul>
 <%@ include file="/WEB-INF/jspf/footer.jspf" %>
